[cleanup][broker][Modernizer] fix violations in pulsar-broker